Fix starting browser on linux